--- a/pages/perimeter.html
+++ b/pages/perimeter.html
@@ -4,13 +4,13 @@
 	<head>
 		<meta charset=utf-8 />
 		<meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no' />
-		<link rel="stylesheet" type="text/css" href="../static/css/leaflet.css" />
+		<link href="https://cdn.bootcdn.net/ajax/libs/leaflet/1.7.1/leaflet.css" rel="stylesheet">
 		<link rel="stylesheet" href="MarkerCluster.Default.css" />
 		<link rel="stylesheet" href="leaflet-geojson-selector.css" />
-		<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-		<script src="../static/js/leaflet.js"></script>
+		<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://cdn.bootcdn.net/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
 		<script src="../static/js/leaflet.ChineseTmsProviders.js"></script>
-		<script src="../static/js/leaflet.ajax.js"></script>
+		<script src="https://cdn.bootcdn.net/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.js"></script>
 		<script src="leaflet-geojson-selector.js"></script>
 
 		<style>
