--- a/pages/findloca.html
+++ b/pages/findloca.html
@@ -3,13 +3,13 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" type="text/css" href="../static/css/leaflet.css" />
+		<link href="https://cdn.bootcdn.net/ajax/libs/leaflet/1.7.1/leaflet.css" rel="stylesheet">
 		<link rel="stylesheet" href="leaflet-geojson-selector.css" />
 		<!-- 调用jquery -->
-		<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-		<script src="../static/js/leaflet.js"></script>
+		<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://cdn.bootcdn.net/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
 		<script src="../static/js/leaflet.ChineseTmsProviders.js"></script>
-		<script src="../static/js/leaflet.ajax.js"></script>
+		<script src="https://cdn.bootcdn.net/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.js"></script>
 		<!-- 用于列出查询结果的插件 -->
 		<script src="leaflet-geojson-selector.js"></script>
 
