--- a/pages/introduce.html
+++ b/pages/introduce.html
@@ -10,8 +10,8 @@
         <div class="container py-3">
             <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
                 <h1 class="display-4 fw-normal">XMX地图导航站</h1>
-                <p class="fs-5 text-muted">这是一个非常带劲的地图导航网站。</p>
-                <img src="../static/images/haha.PNG" style="text-align: center; width: 22%;">
+                <p class="fs-5 text-muted">这是一个非常带劲的地图导航网站。<br> 18GIS 109092018027 陈熠民</p>
+                <img src="https://www.hualigs.cn/image/60bb272c3a77b.jpg" style="text-align: center; width: 22%;">
             </div>
         </div>
     </body>
