--- a/pages/mainmap.html
+++ b/pages/mainmap.html
@@ -6,13 +6,13 @@
         <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no' />
         <!-- 引用一些js -->
         <link rel="shortcut icon" href="../static/images/favicon.ico"> <!-- 设置icon -->
-        <link href="../static/css/leaflet.css" type="text/css" rel="stylesheet"/>
+        <link href="https://cdn.bootcdn.net/ajax/libs/leaflet/1.7.1/leaflet.css" rel="stylesheet">
         <link href="../static/css/leaflet.draw.css" type="text/css" rel="stylesheet"/> 
-        <script src="../static/js/leaflet.js"></script>
-        <script src="../static/js/leaflet.ajax.js"></script>
+        <script src="https://cdn.bootcdn.net/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
+        <script src="https://cdn.bootcdn.net/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.js"></script>
         <script src="../static/js/leaflet.draw.js"></script>
         <script src="../static/js/leaflet.ChineseTmsProviders.js"></script>
-        <script src="../static/js/jquery-1.12.0.min.js"></script>
+        <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <!-- 标题 -->
         <title>Leaflet地图调用</title>        
