--- a/pages/heatMap.html
+++ b/pages/heatMap.html
@@ -20,6 +20,13 @@
     </head>
     <body>
         <div id="mapCanvas">
+			<div class="position">
+                指针经度：<span id="mouse_lng">NaN</span>°
+                指针纬度：<span id="mouse_lat">NaN</span>°
+                中心经度：<span id="center_lng">NaN</span>°
+                中心纬度：<span id="center_lat">NaN</span>°
+                当前缩放等级：<span id="level">NaN</span>级
+            </div>
             <div id="map" style="width: 100%;height: 40vw;"></div>
         </div>
 		<script type="text/javascript">
@@ -53,6 +60,26 @@
 				zoom: 12,
 				layers: [normal]
 			});
+			map.on('mousemove', function (e) {
+				document.getElementById("mouse_lng").innerHTML = e.latlng.lng.toFixed(5)
+				document.getElementById("mouse_lat").innerHTML = e.latlng.lat.toFixed(5)
+			})
+
+			map.on('move', function (e) {
+				/* console.log(e.target) */
+				document.getElementById("center_lng").innerHTML = map.getCenter().lng.toFixed(5)
+				document.getElementById("center_lat").innerHTML = map.getCenter().lat.toFixed(5)
+			})
+    map.on('zoomend ', function (e) {
+    let zoom = map.getZoom();
+    document.getElementById("level").innerHTML = map.getZoom()
+    // if (zoom > 10) {
+    //     map.addLayer(LineLayer);
+    // }
+    // else if (zoom <= 10) {
+    //     map.removeLayer(LineLayer);               
+    // }
+}); 
 			L.control.layers(baseLayers).addTo(map);
 			
 			//定义热力图图层
@@ -64,11 +91,11 @@
 			
 			//定义用于点显示的样式
 			var pointStyle = {
-				radius: 1,
+				radius: 2,
 				fillColor: "#000000",
-				color: "#000000",
+				color: "#257ECA",
 				weight: 1,
-				fillOpacity: 1
+				fillOpacity: 0
 			};
 			//加载用于热力图显示的数据图层
 			var stubuildinglayer = new L.GeoJSON.AJAX('/static/json/cheshuo.geojson', {
