--- a/heatMap.html
+++ b/heatMap.html
@@ -5,16 +5,16 @@
         <meta charset="utf-8">
         <!-- 引用一些js -->
         <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.2.0.js"></script>
-        <link rel="shortcut icon" href="../static/images/favicon.ico"> <!-- 设置icon -->
+        <link rel="shortcut icon" href="static/images/favicon.ico"> <!-- 设置icon -->
         <link href="https://cdn.bootcdn.net/ajax/libs/leaflet/1.7.1/leaflet.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="../static/css/leaflet.draw.css" /> 
+        <link rel="stylesheet" type="text/css" href="static/css/leaflet.draw.css" /> 
         <script src="https://cdn.bootcdn.net/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
-        <script src="../static/js/leaflet.ChineseTmsProviders.js"></script>
+        <script src="static/js/leaflet.ChineseTmsProviders.js"></script>
         <script src="https://cdn.bootcdn.net/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.js"></script>
         <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="../static/js/leaflet-heat.js"></script>
-        <!-- <script src="../static/js/stubuildpoint.js"></script> -->
-        <!-- <script src="../static/js/leaflet.markercluster.js"></script> -->
+        <script src="static/js/leaflet-heat.js"></script>
+        <!-- <script src="static/js/stubuildpoint.js"></script> -->
+        <!-- <script src="static/js/leaflet.markercluster.js"></script> -->
         <!-- 标题 -->
         <title>Leaflet热力图、聚类图</title>        
     </head>
