--- a/mainmap.html
+++ b/mainmap.html
@@ -5,13 +5,13 @@
         <meta charset="utf-8">
         <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no' />
         <!-- 引用一些js -->
-        <link rel="shortcut icon" href="../static/images/favicon.ico"> <!-- 设置icon -->
+        <link rel="shortcut icon" href="static/images/favicon.ico"> <!-- 设置icon -->
         <link href="https://cdn.bootcdn.net/ajax/libs/leaflet/1.7.1/leaflet.css" rel="stylesheet">
-        <link href="../static/css/leaflet.draw.css" type="text/css" rel="stylesheet"/> 
+        <link href="static/css/leaflet.draw.css" type="text/css" rel="stylesheet"/> 
         <script src="https://cdn.bootcdn.net/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
         <script src="https://cdn.bootcdn.net/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.js"></script>
-        <script src="../static/js/leaflet.draw.js"></script>
-        <script src="../static/js/leaflet.ChineseTmsProviders.js"></script>
+        <script src="static/js/leaflet.draw.js"></script>
+        <script src="static/js/leaflet.ChineseTmsProviders.js"></script>
         <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <!-- 标题 -->
