--- a/trans.html
+++ b/trans.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset=utf-8 />
     <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <link rel="icon" type="image/x-icon" href="../static/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- JavaScript Bundle with Popper -->
@@ -16,8 +16,8 @@
             <table style="margin-bottom: 5px;" class="table table-hover";border="1px solid gray" width="400">
                 <tbody>
                     <tr style="text-align: center;">
-                        <th><img src="../static/images/pin-fill.svg" alt="Bootstrap" width="24" height="24"s>原坐标系</th>
-                        <th><img src="../static/images/pin-map-fill.svg" alt="Bootstrap" width="24" height="24">原坐标</th>
+                        <th><img src="static/images/pin-fill.svg" alt="Bootstrap" width="24" height="24"s>原坐标系</th>
+                        <th><img src="static/images/pin-map-fill.svg" alt="Bootstrap" width="24" height="24">原坐标</th>
                     </tr>
                     <tr>
                         <td>
